# bevy-joust

./: Cargo.toml  README.md  run.sh
assets/pxo/: bird.pxo  blue.pxo  crushed.pxo  egg.pxo  flame.pxo  grey.pxo  indigo.pxo  parrot.pxo  pop.pxo  pter.pxo  red.pxo  spurt.pxo  vulture.pxo  yellow.pxo
src/: constants.rs  main.rs
src/animation/: eggman_animation.rs  mod.rs  pop.rs  pter_animation.rs  rider_animation.rs
src/behavior/: eggman_control.rs  mod.rs  movement_control.rs  pter_control.rs
src/engine/: collision.rs  despawn.rs  mod.rs  physics.rs  speed_clamps.rs  wraparound.rs
src/entities/: eggman.rs  mod.rs  platform.rs  pter.rs  rider.rs  rider_physics.rs  spritesheets.rs
src/player/: mod.rs  player_control.rs  player_damage.rs
