[package]
name = "bevy-joust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# TODO revert dynamic before release
bevy = {version = "0.12.1", features = ["dynamic_linking", "wayland"]}
bevy-inspector-egui = "0.22.1"
cgmath = "0.18.0"
rand = "0.8.5"
modulo = "0.1.2"

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

